--- a/product.html
+++ b/product.html
@@ -77,10 +77,10 @@
                 <div class="col-md-3 text-center">
                     <div class="card mb-4 border border-dark">
                         <div class="card-body">
-                            <h5 class="card-title">SAMSUNG A04</h5>
+                            <h5 class="card-title">MarBar 6000</h5>
                             <img src="img/products/product-2.png" class="card-img-top" style="height: 44.5vh;"
                                 alt="">
-                            <p class="card-text">17,000PHP W/ HUG</p>
+                            <p class="card-text">499PHP</p>
                             <a href="#" class="btn btn-primary">Buy Now</a>
                         </div>
                     </div>
