--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
         At Vapor Haven, we believe in the power of a satisfying vape experience. Our goal is to provide you with
         top-quality e-liquids, advanced vaping devices, and personalized guidance to enhance your vaping journey.
 
-        Discover a realm of endless possibilities at [Vape Shop Name]. As vaping enthusiasts ourselves, we are committed
+        Discover a realm of endless possibilities at Vapor Haven. As vaping enthusiasts ourselves, we are committed
         to curating a wide selection of premium e-liquids, innovative hardware, and accessories that will elevate your
         vaping experience to new heights. </p>
       <p class="lead"></p>
